--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,29 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+[project]
+name = "bibliotype"
+version = "0.1.0"
+description = "Goodreads data analyser"
+authors = [
+    {name = "vanajmoorthy",email = "vanajmoorthy@gmail.com"}
+]
+readme = "README.md"
+requires-python = "^3.13"
+dependencies = [
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "django (>=5.2.5,<6.0.0)",
+    "pandas (>=2.3.2,<3.0.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "vadersentiment (>=3.3.2,<4.0.0)",
+    "google-generativeai (>=0.8.5,<0.9.0)",
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "dj-database-url (>=3.0.1,<4.0.0)"
+]
+
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
