--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
+    "prettier": "^3.6.2",
+    "prettier-plugin-jinja-template": "^2.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11"
   }
 }
