--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,11 @@ services:
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         # We don't need to expose the port to the outside world,
         # as the web service will connect to it internally via Docker's network.
+    healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+        interval: 5s
+        timeout: 5s
+        retries: 5
 
     web:
         build: .
@@ -27,8 +32,8 @@ services:
             - DEBUG=${DEBUG}
             - ALLOWED_HOSTS=${ALLOWED_HOSTS}
         depends_on:
-            - db
-
+            db:
+                condition: service_healthy
 volumes:
     postgres_data:
     static_volume:
