--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,6 +31,9 @@ services:
             - GEMINI_API_KEY=${GEMINI_API_KEY}
             - DEBUG=${DEBUG}
             - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+            - POSTGRES_DB=${POSTGRES_DB}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         depends_on:
             db:
                 condition: service_healthy
