--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,4 +51,6 @@ jobs:
 
                       docker compose -f docker-compose.prod.yml up -d --force-recreate
 
+                      sudo chown -R $USER:www-data staticfiles/ && sudo chmod -R 775 staticfiles/
+
                       docker image prune -f
