build: Integrate Tailwind CSS build into Dockerfile

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
                       docker compose -f docker-compose.prod.yml up -d --force-recreate
 
                       echo "Fixing static file permissions..."
-                      sudo chown -R $USER:www-data staticfiles/ && sudo chmod -R 775 staticfiles/
+                      sudo chown -R bibliotype:www-data staticfiles/ && sudo chmod -R 775 staticfiles/
 
                       echo "Pruning old docker images"
                       docker image prune -f
