--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "bibliotype",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "npx @tailwindcss/cli -i ./static/src/input.css -o ./static/dist/output.css --watch"
-  },
-  "dependencies": {
-    "@tailwindcss/cli": "^4.1.11",
-    "prettier": "^3.6.2",
-    "prettier-plugin-jinja-template": "^2.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.11"
-  }
+    "name": "bibliotype",
+    "version": "1.0.0",
+    "scripts": {
+        "dev": "npx @tailwindcss/cli -i ./static/src/input.css -o ./static/dist/output.css --watch",
+        "build": "npx @tailwindcss/cli -i ./static/src/input.css -o ./static/dist/output.css --minify"
+    },
+    "dependencies": {
+        "@tailwindcss/cli": "^4.1.11",
+        "prettier": "^3.6.2",
+        "prettier-plugin-jinja-template": "^2.1.0",
+        "prettier-plugin-tailwindcss": "^0.6.14",
+        "tailwindcss": "^4.1.11"
+    }
 }
