--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,9 @@ dependencies = [
     "google-generativeai (>=0.8.5,<0.9.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
-    "dj-database-url (>=3.0.1,<4.0.0)"
+    "dj-database-url (>=3.0.1,<4.0.0)",
+    "celery (>=5.5.3,<6.0.0)",
+    "redis (>=6.4.0,<7.0.0)"
 ]
 
 
