--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -14,10 +14,15 @@ services:
             interval: 5s
             timeout: 5s
             retries: 5
+    redis:
+        image: redis:7-alpine
+        ports:
+            # Optional: Expose Redis port for monitoring tools
+            - "6379:6379"
 
     web:
         build: .
-        command: sh -c "./wait-for-postgres.sh db poetry run python manage.py runserver 0.0.0.0:8000"
+        command: sh -c "./wait-for-postgres.sh db && poetry run python manage.py migrate && poetry run python manage.py runserver 0.0.0.0:8000"
         volumes:
             - .:/app
             - /app/.venv
@@ -35,5 +40,30 @@ services:
         depends_on:
             db:
                 condition: service_healthy
+            redis:
+                condition: service_started
+
+    worker:
+        build: . # It uses the same image/code as the web service
+        # This command starts the Celery worker
+        command: sh -c "./wait-for-postgres.sh db && poetry run celery -A bibliotype worker -l info"
+        volumes:
+            # Mount the entire project for live code reloading on the worker too
+            - .:/app
+            - /app/.venv
+        environment:
+            - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+            - CELERY_BROKER_URL=redis://redis:6379/0
+            - CELERY_RESULT_BACKEND=redis://redis:6379/0
+            - SECRET_KEY=${SECRET_KEY}
+            - GEMINI_API_KEY=${GEMINI_API_KEY}
+            - DEBUG=True
+            - ALLOWED_HOSTS=localhost,127.0.0.1
+            - POSTGRES_DB=${POSTGRES_DB}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        depends_on:
+            - db
+            - redis
 volumes:
     postgres_data:
