home page changes, data scraping etc

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,9 @@ dependencies = [
     "gunicorn (>=23.0.0,<24.0.0)",
     "dj-database-url (>=3.0.1,<4.0.0)",
     "celery (>=5.5.3,<6.0.0)",
-    "redis (>=6.4.0,<7.0.0)"
+    "redis (>=6.4.0,<7.0.0)",
+    "bs4 (>=0.0.2,<0.0.3)",
+    "django-redis (>=6.0.0,<7.0.0)"
 ]
 
 
