--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+known_first_party = ["bibliotype"] 
 
 [project]
 name = "bibliotype"
@@ -39,3 +40,6 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pyright = {extras = ["nodejs"], version = "^1.1.373"}
