--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,7 +26,6 @@ services:
         ports:
             - "127.0.0.1:8000:8000"
         environment:
-            # These are all read from the .env file on your server
             - DJANGO_ENV=production
             - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
             - CELERY_BROKER_URL=redis://redis:6379/0
@@ -47,9 +46,7 @@ services:
     worker:
         build: .
         image: ${DOCKERHUB_USERNAME}/bibliotype:${IMAGE_TAG:-latest}
-        # This command is the same as your local one
         command: sh -c "poetry run celery -A bibliotype worker -l info"
-        # VOLUMES ARE REMOVED FOR PRODUCTION. The code is inside the image.
         environment:
             - DJANGO_ENV=production
             - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
@@ -57,7 +54,7 @@ services:
             - CELERY_RESULT_BACKEND=redis://redis:6379/0
             - SECRET_KEY=${SECRET_KEY}
             - GEMINI_API_KEY=${GEMINI_API_KEY}
-            - DEBUG=${DEBUG} # Should be False in your production .env
+            - DEBUG=${DEBUG}
             - ALLOWED_HOSTS=${ALLOWED_HOSTS}
             - POSTGRES_DB=${POSTGRES_DB}
             - POSTGRES_USER=${POSTGRES_USER}
