--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "redis (>=6.4.0,<7.0.0)",
     "bs4 (>=0.0.2,<0.0.3)",
     "django-redis (>=6.0.0,<7.0.0)",
-    "posthog (>=6.7.2,<7.0.0)"
+    "posthog (>=6.7.2,<7.0.0)",
+    "django-celery-results (>=2.6.0,<3.0.0)"
 ]
 
 
