feat: implement comprehensive book recommendation system
- Add UserBook model to track many-to-many relationship between users and books
- Add AnonymousUserSession and AnonymizedReadingProfile models for anonymous user tracking
- Create user similarity service with Jaccard, cosine similarity for genres/authors
- Implement recommendation engine with fallback to favorite authors/genres
- Add top books calculation using ratings and sentiment analysis
- Create anonymization service for anonymous session data
- Add Celery periodic task for batch anonymization
- Update DNA calculation to store UserBook entries from CSV
- Add recommendations display to DNA and public profile pages
- Create comprehensive test suite with 10 test cases
- Add management commands for generating test data
- Update UI to show percentage match and colored recommendation tiles
- Use public user profiles for recommendation sources
- Fix public profile recommendations to show profile owner's recs, not viewer's

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -31,6 +31,7 @@ services:
             - DJANGO_ENV=development
             - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
             - SECRET_KEY=${SECRET_KEY}
+            - POSTHOG_API_KEY=${POSTHOG_API_KEY}
             - GEMINI_API_KEY=${GEMINI_API_KEY}
             - POSTGRES_DB=${POSTGRES_DB}
             - POSTGRES_USER=${POSTGRES_USER}
