update example env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+POSTHOG_API_KEY=
 GEMINI_API_KEY=
 SECRET_KEY=
 POSTGRES_DB=
@@ -6,3 +7,9 @@ POSTGRES_PASSWORD=
 NYT_API_KEY=
 NYT_API_SECRET=
 GOOGLE_BOOKS_API_KEY=
+
+# Optional if you are running without docker
+# DATABASE_URL=postgres://bibliotype_user:yoursecurepassword123@127.0.0.1:5432/bibliotype_db
+
+# CELERY_BROKER_URL=redis://127.0.0.1:6379/0
+# CELERY_RESULT_BACKEND=redis://127.0.0.1:6379/0
