run tailwind watcher in local docker container and update 404

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -21,15 +21,20 @@ services:
 
     web:
         build: .
-        command: poetry run python manage.py runserver 0.0.0.0:8000
+        # Run both Django server and Tailwind CSS watcher in parallel
+        command: sh -c "pnpm run dev & poetry run python manage.py runserver 0.0.0.0:8000"
         volumes:
             - .:/app
             - /app/.venv
+            - /app/node_modules
         ports:
             - "8000:8000"
         environment:
             - DJANGO_ENV=development
             - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+            - CELERY_BROKER_URL=redis://redis:6379/0
+            - CELERY_RESULT_BACKEND=redis://redis:6379/0
+            - REDIS_CACHE_URL=redis://redis:6379/1
             - SECRET_KEY=${SECRET_KEY}
             - POSTHOG_API_KEY=${POSTHOG_API_KEY}
             - GEMINI_API_KEY=${GEMINI_API_KEY}
