--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "django-redis (>=6.0.0,<7.0.0)",
     "posthog (>=6.7.2,<7.0.0)",
     "django-celery-results (>=2.6.0,<3.0.0)",
+    "django-silk (>=5.1.3,<6.0.0)",
     "djlint (>=1.36.4,<2.0.0)"
 ]
 
